recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:2: error: not found: value Krak
  Krak(levels,length)
  ^