recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
  Krak(levels,length)
}

